<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- App -->
	<string name="app_name">Sick Sends</string>
	<string name="app_first_run">app_first_run</string>
	<string name="app_rating_counter">app_rating_counter</string>
	<string name="home">Home</string>
	<string name="about">About</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="general">General</string>

	<string name="name">Name</string>
	<string name="attempts">Attempts</string>
	<string name="grade">Grade</string>
	<string name="grading_system">Grading system</string>
	<string name="feel_scale">Feel scale</string>
	<string name="hold_type">Holds</string>


	<!-- How did it feel -->
	<string name="very_easy">Very Easy</string>
	<string name="easy">Easy</string>
	<string name="normal">Normal</string>
	<string name="hard">Hard</string>
	<string name="very_hard">Very Hard</string>


	<!-- Climbing techniques -->
	<string name="arm_bar">Arm bar</string>
	<string name="bat_hang">Bat hang</string>
	<string name="bicycle">Bicycle</string>
	<string name="campus">Campus</string>
	<string name="drop_knee">Drop knee</string>
	<string name="dyno">Dyno</string>
	<string name="figure_four">Figure four</string>
	<string name="finger_jam">Finger jam</string>
	<string name="fist_jam">Fist jam</string>
	<string name="gaston">Gaston</string>
	<string name="hand_jam">Hand jam</string>
	<string name="heel_hook">Heel hook</string>
	<string name="knee_bar">Knee bar</string>
	<string name="layback">Layback</string>
	<string name="mantle">Mantle</string>
	<string name="rose_move">Rose move</string>
	<string name="smear">Smear</string>
	<string name="stem">Stem</string>
	<string name="toe_hook">Toe hook</string>


	<!-- Holds -->
	<string name="crimp">Crimp</string>
	<string name="horn">Horn</string>
	<string name="jug">Jug</string>
	<string name="pinch">Pinch</string>
	<string name="pocket">Pocket</string>
	<string name="sloper">Sloper</string>
	<string name="side_pull">Side pull</string>
	<string name="undercling">Undercling</string>
	<string name="volume">Volume</string>


	<!-- Wall features-->
	<string name="arete">Arete</string>
	<string name="chimney">Chimney</string>
	<string name="crack">Crack</string>
	<string name="dihedral">Dihedral</string>
	<string name="face">Face</string>
	<string name="high_ball">High ball</string>
	<string name="overhang">Overhang</string>
	<string name="roof">Roof</string>
	<string name="slab">Slab</string>
	<string name="top_out">Top out</string>
	<string name="traverse">Traverse</string>


	<!-- Questions -->
	<string name="question_climb_name">What was the name of the climb?</string>
	<string name="question_climb_attempts">How many attempts did it take?</string>
	<string name="question_climb_grading_system">What grading system are you using?</string>
	<string name="question_climb_grade">What was the grade?</string>
	<string name="question_climb_feel_scale">How did the climb feel?</string>
	<string name="question_climb_hold_type">What types of holds are there?</string>



	<!-- Misc -->
	<string name="indoor">Indoor</string>
	<string name="outdoor">Outdoor</string>



	<!-- Onboarding -->
	<string name="welcome">Welcome to the\nSick Sends climbing app!</string>
	<string name="get_started">Get started</string>
	<string name="navigate_previous">Back</string>
	<string name="navigate_next">Next</string>
	<string name="navigate_finish">Finish</string>
	<string name="climbing_title">Climbing types</string>
	<string name="climbing_subtitle">Keep track of the different types of climbs you do. You can always change this later.</string>
	<string name="grade_title">Grading systems</string>
	<string name="grade_subtitle">Save your climbs with multiple grading systems. You can always change this later.</string>



	<!-- Whether the user will climb a particular type -->
	<string name="will_climb_boulder">will_climb_boulder</string>
	<string name="will_climb_lead">will_climb_lead</string>
	<string name="will_climb_sport">will_climb_sport</string>
	<string name="will_climb_top_rope">will_climb_top_rope</string>
	<string name="will_climb_trad">will_climb_trad</string>


	<!-- Whether the user will use a grade in a particular climbing type -->
	<string name="use_grade_boulder">use_grade_boulder</string>
	<string name="use_grade_lead">use_grade_lead</string>
	<string name="use_grade_sport">use_grade_sport</string>
	<string name="use_grade_top_rope">use_grade_top_rope</string>
	<string name="use_grade_trad">use_grade_trad</string>



	<!-- Types of climbing -->
	<string name="boulder">Boulder</string>
	<string name="lead">Lead</string>
	<string name="sport">Sport</string>
	<string name="top_rope">Top Rope</string>
	<string name="trad">Trad</string>



	<!-- Types of grades -->
	<string name="grade_boulder_font">Fontainebleau</string>
	<string name="grade_boulder_uk">UK</string>
	<string name="grade_boulder_vscale">V Scale</string>
	<string name="grade_rope_aus">Australian</string>
	<string name="grade_rope_bra">Brasilian</string>
	<string name="grade_rope_fin">Finnish</string>
	<string name="grade_rope_fre">French</string>
	<string name="grade_rope_nor">Norway</string>
	<string name="grade_rope_pol">Poland</string>
	<string name="grade_rope_sax">Saxon</string>
	<string name="grade_rope_uiaa">UIAA</string>
	<string name="grade_rope_usa">USA</string>
	<string name="grade_trad_bri">British</string>



	<!-- Examples of types of grades -->
	<string name="example_grade_boulder_font">5, 5&#43;, 6A, &#8230;</string>
	<string name="example_grade_boulder_uk">5b, 5c, 6a, &#8230;</string>
	<string name="example_grade_boulder_vscale">V1, V2, V3, &#8230;</string>
	<string name="example_grade_rope_aus">16, 17, 18, &#8230;</string>
	<string name="example_grade_rope_bra">VI, VI sup, 7a, &#8230;</string>
	<string name="example_grade_rope_fin">7, 7&#43;, 8&#8722;, &#8230;</string>
	<string name="example_grade_rope_fre">6a, 6a&#43;, 6b, &#8230;</string>
	<string name="example_grade_rope_nor">7, 7&#43;, 7&#43;&#8725;8&#8722;, &#8230;</string>
	<string name="example_grade_rope_pol">VI&#43;, VI.1, VI.1&#43;, &#8230;</string>
	<string name="example_grade_rope_sax">VIIIa, VIIIb, VIIIc, &#8230;</string>
	<string name="example_grade_rope_uiaa">VII, VII&#43;, VIII&#8722;, &#8230;</string>
	<string name="example_grade_rope_usa">5.10a, 5.10b, 5.10c, &#8230;</string>
	<string name="example_grade_trad_bri">E1 5b, E2 5c, E3 6a, &#8230;</string>



	<!-- Whether the particular grade uses a plus or minus-->
	<!--
	<string name="use_plus_grade_boulder_font"></string>
	<string name="use_plus_grade_boulder_uk"></string>
	<string name="use_plus_grade_boulder_vscale"></string>
	<string name="use_plus_grade_rope_aus"></string>
	<string name="use_plus_grade_rope_bra"></string>
	<string name="use_plus_grade_rope_fin"></string>
	<string name="use_plus_grade_rope_fre"></string>
	<string name="use_plus_grade_rope_nor"></string>
	<string name="use_plus_grade_rope_pol"></string>
	<string name="use_plus_grade_rope_sax"></string>
	<string name="use_plus_grade_rope_uiaa"></string>
	<string name="use_plus_grade_rope_usa"></string>
	<string name="use_plus_grade_trad_bri"></string>
	-->


	<!-- Whether the particular grade uses a letter -->
	<!--
	<string name="use_plus_grade_boulder_font"></string>
	<string name="use_plus_grade_boulder_uk"></string>
	<string name="use_plus_grade_boulder_vscale"></string>
	<string name="use_plus_grade_rope_aus"></string>
	<string name="use_plus_grade_rope_bra"></string>
	<string name="use_plus_grade_rope_fin"></string>
	<string name="use_plus_grade_rope_fre"></string>
	<string name="use_plus_grade_rope_nor"></string>
	<string name="use_plus_grade_rope_pol"></string>
	<string name="use_plus_grade_rope_sax"></string>
	<string name="use_plus_grade_rope_uiaa"></string>
	<string name="use_plus_grade_rope_usa"></string>
	<string name="use_plus_grade_trad_bri"></string>
	-->



	<!-- Error messages -->
	<string name="error_message_no_climbing_type_selected">Please select a climbing type</string>



	<!-- Settings -->
	<string name="settings">Settings</string>
	<string name="statistics">Statistics</string>

</resources>
