<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/home_from_bar"
		android:enabled="true"
		android:icon="@mipmap/home"
		android:title="@string/home"
		/>

	<item
		android:id="@+id/boulder_from_bar"
		android:enabled="true"
		android:icon="@mipmap/boulder"
		android:title="@string/boulder"
		/>

	<item
		android:id="@+id/lead_from_bar"
		android:enabled="true"
		android:icon="@mipmap/lead"
		android:title="@string/lead"
		/>

	<!--
	<item
		android:id="@+id/sport_from_bar"
		android:enabled="true"
		android:icon="@mipmap/sport"
		android:title="@string/sport"
		/>
	-->

	<item
		android:id="@+id/top_rope_from_bar"
		android:enabled="true"
		android:icon="@mipmap/top_rope"
		android:title="@string/top_rope"
		/>

	<item
		android:id="@+id/trad_from_bar"
		android:enabled="true"
		android:icon="@mipmap/trad"
		android:title="@string/trad"
		/>
</menu>
