<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal">

	<com.google.android.material.button.MaterialButtonToggleGroup
		android:id="@+id/grade_choices_sport"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<com.google.android.material.button.MaterialButton
			style="@style/OnboardingTheme.Button.Toggle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAllCaps="false"
			android:text="@string/grade_rope_aus"
			/>
		<com.google.android.material.button.MaterialButton
			style="@style/OnboardingTheme.Button.Toggle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAllCaps="false"
			android:text="@string/grade_rope_bra"
			/>
		<com.google.android.material.button.MaterialButton
			style="@style/OnboardingTheme.Button.Toggle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAllCaps="false"
			android:text="@string/grade_rope_fin"
			/>
		<com.google.android.material.button.MaterialButton
			style="@style/OnboardingTheme.Button.Toggle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAllCaps="false"
			android:text="@string/grade_rope_fre"
			/>
		<com.google.android.material.button.MaterialButton
			style="@style/OnboardingTheme.Button.Toggle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAllCaps="false"
			android:text="@string/grade_rope_nor"
			/>
		<com.google.android.material.button.MaterialButton
			style="@style/OnboardingTheme.Button.Toggle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAllCaps="false"
			android:text="@string/grade_rope_pol"
			/>
		<com.google.android.material.button.MaterialButton
			style="@style/OnboardingTheme.Button.Toggle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAllCaps="false"
			android:text="@string/grade_rope_sax"
			/>
		<com.google.android.material.button.MaterialButton
			style="@style/OnboardingTheme.Button.Toggle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAllCaps="false"
			android:text="@string/grade_rope_uiaa"
			/>
		<com.google.android.material.button.MaterialButton
			style="@style/OnboardingTheme.Button.Toggle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAllCaps="false"
			android:text="@string/grade_rope_usa"
			/>
	</com.google.android.material.button.MaterialButtonToggleGroup>
</HorizontalScrollView>
