<?xml version="1.0" encoding="utf-8"?>
<navigation
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/nav_graph"
	app:startDestination="@id/frg_home">

	<!-- Add tools:layout -->
	<fragment
		android:name="me.gabeg.sicksends.main.SsHomeFragment"
		android:id="@+id/frg_home"
		android:label="@string/home"
		/>

	<fragment
		android:name="me.gabeg.sicksends.boulder.SsBoulderFragment"
		android:id="@+id/frg_boulder"
		android:label="@string/boulder"
		/>

	<fragment
		android:name="me.gabeg.sicksends.sport.SsSportFragment"
		android:id="@+id/frg_sport"
		android:label="@string/sport"
		/>

	<fragment
		android:name="me.gabeg.sicksends.toprope.SsTopRopeFragment"
		android:id="@+id/frg_top_rope"
		android:label="@string/top_rope"
		/>

	<fragment
		android:name="me.gabeg.sicksends.trad.SsTradFragment"
		android:id="@+id/frg_trad"
		android:label="@string/trad"
		/>

	<fragment
		android:name="me.gabeg.sicksends.addclimb.SsAddClimbFragment"
		android:id="@+id/frg_add_climb"
		android:label="Add climb"
		/>
</navigation>
