<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android">

	<!-- Home page -->
	<group
		android:id="@+id/home_drawer_group"
		android:orderInCategory="100"
		android:checkableBehavior="single">

		<item
			android:id="@+id/home_from_drawer"
			android:enabled="true"
			android:icon="@mipmap/home"
			android:title="@string/home"
			/>
	</group>

	<!-- Climbing types -->
	<group
		android:id="@+id/climbing_type_drawer_group"
		android:orderInCategory="200">
		<!--
		android:checkableBehavior="single">
		-->

		<item android:title="Climb types">
			<menu>
				<group android:checkableBehavior="single">

				<item
					android:id="@+id/boulder_from_drawer"
					android:enabled="true"
					android:icon="@mipmap/boulder"
					android:title="@string/boulder"
					/>

				<item
					android:id="@+id/sport_from_drawer"
					android:enabled="true"
					android:icon="@mipmap/sport"
					android:title="@string/sport"
					/>

				<item
					android:id="@+id/top_rope_from_drawer"
					android:enabled="true"
					android:icon="@mipmap/top_rope"
					android:title="@string/top_rope"
					/>

				<item
					android:id="@+id/trad_from_drawer"
					android:enabled="true"
					android:icon="@mipmap/trad"
					android:title="@string/trad"
					/>
				</group>
			</menu>
		</item>
	</group>

	<!-- Settings -->
	<group
		android:id="@+id/settings_drawer_group"
		android:orderInCategory="300"
		android:checkableBehavior="none">

		<item
			android:id="@+id/settings_from_drawer"
			android:icon="@mipmap/settings"
			android:title="@string/settings"
			/>
	</group>

</menu>
