<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/card"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="@dimen/normal">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<!-- Media -->
		<ImageView
			android:layout_width="match_parent"
			android:layout_height="194dp"
			app:srcCompat="@mipmap/app"
			android:scaleType="centerCrop"
			android:contentDescription="content_description_media"
			/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="16dp">

			<!-- Title, secondary and supporting text -->
			<TextView
				android:id="@+id/problem_grade"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/get_started"
				android:textAppearance="?attr/textAppearanceHeadline6"
				/>
			<TextView
				android:id="@+id/problem_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:text="@string/climbing_subtitle"
				android:textAppearance="?attr/textAppearanceBody2"
				android:textColor="?android:attr/textColorSecondary"
				/>
			<TextView
				android:id="@+id/problem_style"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/grade_subtitle"
				android:textAppearance="?attr/textAppearanceBody2"
				android:textColor="?android:attr/textColorSecondary"
				/>

		</LinearLayout>

		<!-- Buttons -->
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:orientation="horizontal">
			<com.google.android.material.button.MaterialButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:text="@string/home"
				style="?attr/borderlessButtonStyle"
				/>
			<com.google.android.material.button.MaterialButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/about"
				style="?attr/borderlessButtonStyle"
				/>
		</LinearLayout>

	</LinearLayout>

</com.google.android.material.card.MaterialCardView>
