<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal">

	<com.google.android.material.button.MaterialButtonToggleGroup
		android:id="@+id/grade_choices_boulder"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal">
		<com.google.android.material.button.MaterialButton
			style="@style/OnboardingTheme.Button.Toggle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAllCaps="false"
			android:text="@string/grade_boulder_font"
			/>
		<com.google.android.material.button.MaterialButton
			style="@style/OnboardingTheme.Button.Toggle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAllCaps="false"
			android:text="@string/grade_boulder_uk"
			/>
		<com.google.android.material.button.MaterialButton
			style="@style/OnboardingTheme.Button.Toggle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAllCaps="false"
			android:text="@string/grade_boulder_vscale"
			/>
	</com.google.android.material.button.MaterialButtonToggleGroup>
</HorizontalScrollView>
